# django-websocket

./: pyproject.toml
core/: urls.py  views.py
core/templates/: base.html  index.html
django_websocket/: asgi.py  settings.py  urls.py  wsgi.py
