[tool.poetry]
name = "django-websocket"
version = "0.1.0"
description = ""
authors = ["BrunoBorelliPro <brunoborellipro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
channels = {extras = ["daphne"], version = "^4.0.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
